fix on mobile, try different copy

--- a/app/assets/stylesheets/cats.scss
+++ b/app/assets/stylesheets/cats.scss
@@ -55,6 +55,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   min-height: 425px;
+  background-color: white!important;
   //background-image: image-url("catscatscats.jpg")
 }
 
@@ -356,7 +357,7 @@ body {
 
 .cat-img-js {
   height: 75px;
-  width: 98%;
+  width: 95%;
   border-right: 1px solid black;
   border-left: 1px solid black;
   border-top: 1px solid black;
